added a github link

--- a/weather app.html
+++ b/weather app.html
@@ -76,7 +76,17 @@
         </div>
       </div>
     </div>
-    
+    <footer>
+      <a
+      class="GithubLink"
+      href="https://github.com/marie-dotcom/vscode"
+      target="_blank"
+    ></a>
+      Open-source code
+      <strong>
+        Maryann Omundi
+      </strong>
+    </footer>
     <script src="./index.mjs" type="module"></script>
   </body>
 </html>
