--- a/weather app.html
+++ b/weather app.html
@@ -79,7 +79,7 @@
     <footer>
       <a
       class="GithubLink"
-      href="https://github.com/marie-dotcom/vscode"
+      href="https://github.com/marie-dotcom/weather-app"
       target="_blank"
     ></a>
       Open-source code
