updated the link

--- a/weather app.html
+++ b/weather app.html
@@ -78,10 +78,7 @@
     </div>
     <footer>
       <a
-      class="GithubLink"
-      href="https://github.com/marie-dotcom/weather-app"
-      target="_blank"
-    ></a>
+        href="https://github.com/marie-dotcom/weather-app" target="_blank"></a>
       Open-source code
       <strong>
         Maryann Omundi
