made corrections to the link

--- a/weather-app.html
+++ b/weather-app.html
@@ -78,8 +78,7 @@
     </div>
     <footer>
       <a
-        href="https://github.com/marie-dotcom/weather-app" target="_blank"></a>
-      Open-source code
+        href="https://github.com/marie-dotcom/weather-app" target="_blank">Open-source code</a>
       <strong>
         Maryann Omundi
       </strong>
