--- a/weather-app.html
+++ b/weather-app.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <div class="row">
             <div class="col-9">
               <input
@@ -35,8 +35,10 @@
             </div>
           </div>
         </form>
-        <h1>
-          Sydney NSW, Australia
+        <main>
+          <div class="weather-app-data">
+        <h1
+          class="weather-app-city"> NSW, Australia
         </h1>
         <ul>
           <li>
@@ -60,6 +62,8 @@
               </div>
             </div>
           </div>
+          </div>
+        </main>
           <div class="col-6">
             <ul>
               <li>
@@ -77,12 +81,15 @@
       </div>
     </div>
     <footer>
+      This project was coded by
       <a
-        href="https://github.com/marie-dotcom/weather-app" target="_blank">Open-source code</a>
+        href="https://github.com/marie-dotcom/weather-app" target="_blank">
       <strong>
         Maryann Omundi
-      </strong>
+      </strong> </a>,
+      is <a href="https://github.com/marie-dotcom/weather-app/blob/main/weather-app.html" target="_blank">open-sourced on Github
+    </a>
     </footer>
-    <script src="./index.mjs" type="module"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
