--- a/weather.html
+++ b/weather.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
+  <div class="weather-app-data">
     <div class="container">
         <form class="search-form" id="search-form">
           <div class="row">
@@ -22,7 +23,8 @@
                 placeholder="Type a city.."
                 autofocus="on"
                 autocomplete="off"
-                class="form-control shadow-sm"
+                id="search-form-input"
+                class="search-form-input"
               />
             </div>
             <div class="col-3">
@@ -34,10 +36,9 @@
             </div>
           </div>
         </form>
-        <main>
-          <div class="weather-app-data">
+        
         <h1
-          class="weather-app-city"> NSW, Australia
+          class="weather-app-city" id="city"> NSW, Australia
         </h1>
         <ul>
           <li>
@@ -62,7 +63,7 @@
             </div>
           </div>
           </div>
-        </main>
+        
           <div class="col-6">
             <ul>
               <li>
