--- a/weather.html
+++ b/weather.html
@@ -38,46 +38,26 @@
           </div>
         </form>
         <div>
-        <h1
-          class="weather-app-city" id="city"> 
-        </h1>
-           <p class= "weather-app-details">
-            Wednesday 22:00
-            <span id="description"> Partly cloudy</span>
-            </p>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="Cloudy icon"
-                class="weather-icon float-right"
-              />
-              <div class="float-right">
-                <span class="weather-app-temperature" id="temperature"></span
-                ><span class="units">°C | <a href="#">°F</a></span>
+          <main>
+            <div class="weather-app-data">
+              <div>
+                <h1 class="weather-app-city" id="city"></h1>
+                <p class="weather-app-details">
+                  <span id="time"></span>,
+                  <span id="description"></span>
+                  <br />
+                  Humidity: <strong id="humidity"></strong>, Wind:
+                  <strong id="wind-speed"></strong>
+                </p>
+              </div>
+              <div class="weather-app-temperature-container">
+                <div id="icon"></div>
+                <div class="weather-app-temperature" id="temperature"></div>
+                <div class="weatehr-app-unit">°C</div>
               </div>
             </div>
-          </div>
-          </div>
-        
-          <div class="col-6">
-            <ul>
-              <li>
-                Precipitation: 0%
-              </li>
-              <li>
-                Humidity: 77%
-              </li>
-              <li>
-                Wind: 8 km/h
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+          </main>
+    
     <footer>
       This project was coded by
       <a
