--- a/weather.html
+++ b/weather.html
@@ -53,16 +53,11 @@
               <div class="weather-app-temperature-container">
                 <div id="icon"></div>
                 <div class="weather-app-temperature" id="temperature"></div>
-                <div class="weatehr-app-unit">°C</div>
+                <div class="weather-app-unit">°C</div>
               </div>
             </div>
-            <div class="weather-forecast">
-              <div class="weather-forecast-day">
-                <div class="weather-forecast-temperatures"></div>
                 <div class="weather-forecast" id="forecast"></div>
-            </div>
-              </div>
-            </div>
+          </div>
           </main>
     
     <footer>
